for EasyVision and Pronounceable passwords can not be overriden in either case.

Changes to Existing Features in 3.25.1
======================================
[] Polish installation texts added thanks to Michal Niklas.
[] An entry's password exipry date is set or cleared directly rather than using
the Set and Clear buttons after changing values.

Bugs fixed in 3.25.1
====================
[3234204] PasswordSafe no longer ends if the command flag is set to "-s <databasename>".
[] Controls in Edit are now disabled if entry is protected, even though the user could
not have saved any changes.

New Features for 3.25
=====================
[] Dutch installation instructions thank to Kees, and a first
(incomplete) Dutch translation of the application thank to Bert, Kees
and Fred.
[] Korean texts in the application and installer program thanks to
Seunggyun.
[] Poserpro has provided Traditional Chinese texts for the installer
program.
[] New View menu option: Show entries with Expiry. This is useful for
displaying entries with passwords that are expired or about to expire.

Changes to Existing Features in 3.25
====================================
[3171962] The password expiration warning mechanism now checks for
expiration daily. The display of expired and almost-expired entries
has been redesigned, allowing users to update the entry directly. When
an expired password is changed, the expiry date will be cleared unless
there is a recurring password expiry interval, in which case a new
expiry date will be calculated.
[3131945] Double-clicking on the system tray icon when PasswordSafe is
not minimized now brings it to front, instead of minimizing.
[3131935] Rename of an entry or group in the Tree View can now only be
performed via the Rename shortcut (default value F2), using the Edit
menu or the right-click context menu. Edit in place by double clicking
the entry is no longer allowed as, most of the time, this was not the
desired action.