@@ -131,7 +131,7 @@ The following tables describes the configuration items. Most of them are configu
 
     <tr>
       <td style="width: 214px;">pwusesymbols</td>
-      <td style="width: 68px;"> false</td>
+      <td style="width: 68px;"> true</td>
       <td style="width: 140px;"> database</td>
       <td style="width: 200px; text-align: left;" valign="middle"><small>Password generation policy</small></td>
     </tr>
@@ -374,7 +374,7 @@ The following tables describes the configuration items. Most of them are configu
 
     <tr>
       <td style="width: 185px;">pwlendefault</td>
-      <td style="width: 194px;"> 8</td>
+      <td style="width: 194px;"> 12</td>
       <td style="width: 115px;">database</td>
       <td style="width: 40px;"> 4</td>
       <td style="width: 40px;"> 1024</td>
