@@ -79,7 +79,7 @@ const PWSprefs::boolPref PWSprefs::m_bool_prefs[NumBoolPrefs] = {
   {_T("PWUseLowercase"), true, ptDatabase},                 // database
   {_T("PWUseUppercase"), true, ptDatabase},                 // database
   {_T("PWUseDigits"), true, ptDatabase},                    // database
-  {_T("PWUseSymbols"), false, ptDatabase},                  // database
+  {_T("PWUseSymbols"), true, ptDatabase},                   // database
   {_T("PWUseHexDigits"), false, ptDatabase},                // database
   {_T("PWUseEasyVision"), false, ptDatabase},               // database
   {_T("dontaskquestion"), false, ptApplication},            // application
@@ -134,7 +134,7 @@ const PWSprefs::intPref PWSprefs::m_int_prefs[NumIntPrefs] = {
   {_T("column3width"), static_cast<unsigned int>(-1), ptApplication, -1, -1},    // application
   {_T("column4width"), static_cast<unsigned int>(-1), ptApplication, -1, -1},    // application
   {_T("sortedcolumn"), 0, ptApplication, 0, 15},                    // application
-  {_T("PWDefaultLength"), 8, ptDatabase, 4, 1024},                  // database
+  {_T("PWDefaultLength"), 12, ptDatabase, 4, 1024},                  // database
   // maxmruitems maximum = (ID_FILE_MRU_ENTRYMAX - ID_FILE_MRU_ENTRY1 + 1)
   {_T("maxmruitems"), 4, ptApplication, 0, 20},                     // application
   {_T("IdleTimeout"), 5, ptDatabase, 1, 120},                       // database
